[#177094036] Add new function to support newsletters
