# io-functions-pay-portal/openapi/index.yaml
@@ -123,6 +123,30 @@ paths:
           description: Unavailable service
           schema:
             $ref: "#/definitions/ProblemJson"
+  "/newsletters/{id}/emails":
+    post:
+      operationId: PostNewslettersEmails
+      description: Add an email to newsletter
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: newsletter id
+        type: string
+      - name: body
+        in: body
+        required: true
+        schema:
+          $ref: "#/definitions/RecipientRequest"
+      responses:
+        "200":
+          description: Recipient added
+        "400":
+          description: Bad request
+        "401":
+          description: not authenticated
+        "500":
+          description: generic error            
 definitions:
     ProblemJson:
       $ref: "https://raw.githubusercontent.com/pagopa/io-functions-commons/v10.7.0/openapi/definitions.yaml#/ProblemJson"
@@ -153,3 +177,16 @@ definitions:
       $ref: "https://raw.githubusercontent.com/pagopa/io-pagopa-proxy/v0.8.6/api_pagopa.yaml#/definitions/SpezzoniCausaleVersamento"
     SpezzoniCausaleVersamentoItem:
       $ref: "https://raw.githubusercontent.com/pagopa/io-pagopa-proxy/v0.8.6/api_pagopa.yaml#/definitions/SpezzoniCausaleVersamentoItem"
+    RecipientRequest:
+      type: object
+      required:
+          - email
+          - recaptchaToken
+      properties:
+        name:
+          type: string
+        email:
+          type: string
+          format: email
+        recaptchaToken:
+          type: string  
